# yeold-translator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
resources/: Autorp.txt  WordReplacement.vdf
src/: arp_tokenizer.rs  autorp.rs  lib.rs  main.rs  template_string.rs
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
web/src/components/transformer/: yeold.tsx
