[package]
name = "yeold"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keyvalues-serde = "0.2.1"
nom = "7.1.3"
rand = "0.8.5"
serde = "1.0.216"
vdf-serde = "0.3.0"
wasm-bindgen = "0.2.99"
# for wasm support
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2"]
